@startuml Builder
skinparam backgroundColor #1e1e1e
skinparam classBackgroundColor #2d2d2d
skinparam classBorderColor #999999
skinparam classArrowColor #cccccc
skinparam shadowing false
skinparam roundcorner 10
hide empty members

class Product {
  -parts: List[str]
  +add(part: str)
}

interface Builder {
  +reset()
  +build_part_a()
  +build_part_b()
}
class ConcreteBuilder {
  -_product: Product
  +get_product(): Product
}
class Director {
  -builder: Builder
  +build_minimal(): Product
  +build_full(): Product
}

Builder <|.. ConcreteBuilder
Director --> Builder
ConcreteBuilder *-- Product

@enduml